--- a/pyecommerce/store/templates/store/main.html
+++ b/pyecommerce/store/templates/store/main.html
@@ -64,24 +64,29 @@
                 <a
                   class="dropdown-item"
                   data-action="filtercategory"
-                  href="{% url 'category' name='Baby boy clothes' %}"
-                  >Baby boy clothes</a
+                  href="{% url 'category' name='Crop Top' %}"
+                  >Crop Top</a
                 >
                 <a
                   class="dropdown-item"
-                  href="{% url 'category' name='Baby girl clothes' %}"
-                  >Baby girl clothes</a
+                  href="{% url 'category' name='Pant' %}"
+                  >Pant</a
                 >
                 <a
                   class="dropdown-item"
-                  href="{% url 'category' name='Baby supplies' %}"
-                  >Baby supplies</a
+                  href="{% url 'category' name='Jacket' %}"
+                  >Jacket</a
                 >
                 <a
                   class="dropdown-item"
-                  href="{% url 'category' name='Mom and baby couple' %}"
-                  >Mom and baby couple</a
+                  href="{% url 'category' name='Shoes' %}"
+                  >Shoes</a
                 >
+                <a
+                class="dropdown-item"
+                href="{% url 'category' name='Sport equipment' %}"
+                >Sport equipment</a
+              >
               </div>
             </div>
           </li>
