--- a/pyecommerce/static/css/main.css
+++ b/pyecommerce/static/css/main.css
@@ -107,3 +107,29 @@ h6 {
 .hidden {
   display: none !important;
 }
+
+.search-container {
+  float: right;
+}
+
+.search-container input[type='text'] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.search-container button:hover {
+  background: #ccc;
+}
