--- a/pyecommerce/store/templates/store/registration/orderdetail.html
+++ b/pyecommerce/store/templates/store/registration/orderdetail.html
@@ -81,13 +81,13 @@ table, th, td {
                   </div>
                   <div class="form-group">
                     <label for="message-text" class="col-form-label">Message:</label>
-                    <textarea class="form-control" id="message-text"></textarea>
+                    <textarea class="form-control" id="product-message"></textarea>
                   </div>
                 </form>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Send message</button>
+                <button type="button" class="btn btn-primary" id="btn-product-send" data-orderid="{{order.id}}">Send message</button>
               </div>
             </div>
           </div>
@@ -109,13 +109,13 @@ table, th, td {
                   </div>
                   <div class="form-group">
                     <label for="message-text" class="col-form-label">Message:</label>
-                    <textarea class="form-control" id="message-text"></textarea>
+                    <textarea class="form-control" id="service_message"></textarea>
                   </div>
                 </form>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Send message</button>
+                <button type="button" class="btn btn-secondary" data-action="ReportService" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" id="btn-service-send" data-action="ReportService" data-orderid="{{order.id}}">Send message</button>
               </div>
             </div>
           </div>
@@ -125,4 +125,5 @@ table, th, td {
   </div> 
 </section>
 <script type="text/javascript" src="{% static 'js/profile.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/orderdetail.js' %}"></script>
 {% endblock content %}
